--- a/docker/Dockerfiles/Dockerfile
+++ b/docker/Dockerfiles/Dockerfile
@@ -5,4 +5,5 @@ RUN apt-get install default-jdk -y
 RUN apt-get install wget -y
 RUN wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo apt-key add -
 RUN sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
-RUN apt update && apt install jenkins
+RUN apt update && apt install -y jenkins
+CMD service jenkins start
